--- a/frontend/src/app/client/order/comment/comment.component.html
+++ b/frontend/src/app/client/order/comment/comment.component.html
@@ -1,5 +1,5 @@
 <div class="comment">
-  <label>Comment</label>
+  <label>Комментарий</label>
   <div class="comment__text">
     {{(order$ | async).comment}}
   </div>
