--- a/frontend/src/app/client/order/item-location/item-location.component.html
+++ b/frontend/src/app/client/order/item-location/item-location.component.html
@@ -1,5 +1,5 @@
 <div class="item-location">
-  <label>Stolen item location</label>
+  <label>Расположение украденного предмета</label>
   <div class="item-location__place">
     {{(order$ | async).droppoint}}
   </div>
