--- a/frontend/src/app/master/employees-for-master/employees-for-master.component.html
+++ b/frontend/src/app/master/employees-for-master/employees-for-master.component.html
@@ -1,5 +1,5 @@
 <div class="employees-for-master" [class.loading]="loading">
   <app-employee-list [employees]="employees"></app-employee-list>
 
-  <div *ngIf="employees?.length === 0" class="employees-for-master__no-employees">No active employees</div>
+  <div *ngIf="employees?.length === 0" class="employees-for-master__no-employees">Нет активных сотрудников</div>
 </div>
