--- a/frontend/src/app/master/orders-for-master/orders-for-master.component.html
+++ b/frontend/src/app/master/orders-for-master/orders-for-master.component.html
@@ -2,5 +2,5 @@
   <app-order-list [orders]="orders"
                   (open)="openOrder($event)"></app-order-list>
 
-  <div *ngIf="orders?.length === 0" class="orders-for-master__no-orders">No active orders</div>
+  <div *ngIf="orders?.length === 0" class="orders-for-master__no-orders">Нет активных заказов</div>
 </div>
