--- a/frontend/src/app/shared/order-info/order-info.component.html
+++ b/frontend/src/app/shared/order-info/order-info.component.html
@@ -1,5 +1,5 @@
 <div class="form-control disabled">
-  <label>Service Type</label>
+  <label>Тип заказа</label>
   <div class="order-info__value">{{order.type | orderType}}</div>
 </div>
 
