--- a/frontend/src/app/shared/toolbar/toolbar.component.html
+++ b/frontend/src/app/shared/toolbar/toolbar.component.html
@@ -20,7 +20,7 @@
       <div class="toolbar__icon"></div>
 
       <mat-menu #menu>
-        <button mat-menu-item (click)="onLogout()">Logout</button>
+        <button mat-menu-item (click)="onLogout()">Выйти</button>
       </mat-menu>
     </div>
   </ng-container>
