--- a/frontend/src/app/client/order/order-form/sweep-order-form/sweep-order-form.component.html
+++ b/frontend/src/app/client/order/order-form/sweep-order-form/sweep-order-form.component.html
@@ -1,11 +1,11 @@
 <form class="order-form" [formGroup]="form">
   <div class="form-control" [class.disabled]="form.disabled">
-    <label for="address" appRequired>Address</label>
+    <label for="address" appRequired>Адрес</label>
     <input id="address" type="text" formControlName="address">
   </div>
 
   <div class="form-control" [class.disabled]="form.disabled">
-    <label appRequired>The title of the robbed person</label>
+    <label appRequired>Титул обкрадываемого человека</label>
     <mat-select formControlName="title" [compareWith]="compareEntity">
       <mat-option *ngFor="let title of titles" [value]="title">
         {{title.name}}
@@ -14,12 +14,12 @@
   </div>
 
   <div class="form-control" [class.disabled]="form.disabled">
-    <label appRequired>Item</label>
+    <label appRequired>Предмет</label>
     <app-search-select formControlName="item" [data]="items"></app-search-select>
   </div>
 
   <div class="form-control" [class.disabled]="form.disabled">
-    <label for="description">Description of stealing object</label>
+    <label for="description">Описание предмета</label>
     <textarea id="description" formControlName="description"></textarea>
   </div>
 </form>
