--- a/frontend/src/app/employee/available-orders/available-orders.component.html
+++ b/frontend/src/app/employee/available-orders/available-orders.component.html
@@ -1,10 +1,10 @@
 <div class="available-orders" [class.loading]="loading">
   <div class="available-orders__header">
-    Available Orders
+    Доступные заказы
   </div>
 
   <app-order-list [orders]="orders"
                   (open)="openOrder($event)"></app-order-list>
 
-  <div *ngIf="orders?.length === 0" class="available-orders__no-orders">No available orders</div>
+  <div *ngIf="orders?.length === 0" class="available-orders__no-orders">Нет доступных заказов</div>
 </div>
