--- a/frontend/src/app/employee/completed-order/completed-order.component.html
+++ b/frontend/src/app/employee/completed-order/completed-order.component.html
@@ -3,12 +3,12 @@
     <app-order-info [order]="order"></app-order-info>
 
     <div class="form-control disabled">
-      <label>Droppoint</label>
+      <label>Точка сброса</label>
       <div class="value">{{order.droppoint}}</div>
     </div>
 
     <div class="completed-order__control actions">
-      <button (click)="close()">Close</button>
+      <button (click)="close()">Закрыть</button>
     </div>
   </ng-container>
 </div>
