--- a/frontend/src/app/master/confirm-order/confirm-order.component.html
+++ b/frontend/src/app/master/confirm-order/confirm-order.component.html
@@ -3,12 +3,12 @@
     <app-order-info [order]="order"></app-order-info>
 
     <div class="form-control">
-      <label for="comment">Comment</label>
+      <label for="comment">Комментарий</label>
       <textarea class="comment" type="text" id="comment" formControlName="comment"></textarea>
     </div>
 
     <div class="form-control">
-      <label>Contractor</label>
+      <label>Исполнитель</label>
       <mat-select formControlName="contractor" [compareWith]="compareEntity">
         <mat-option *ngFor="let contractor of contractors" [value]="contractor">
           {{contractor.username}}
@@ -17,21 +17,21 @@
     </div>
 
     <div class="confirm-order__form__actions">
-      <button (click)="close()">Close</button>
+      <button (click)="close()">Закрыть</button>
 
       <div class="price">
-        <label for="price" appRequired>Price</label>
+        <label for="price" appRequired>Цена</label>
         <input type="number" id="price" formControlName="price">
       </div>
 
       <button [disabled]="orderForm.disabled"
-              (click)="decline()">Decline</button>
+              (click)="decline()">Отменить</button>
 
       <button [disabled]="orderForm.disabled || commentInvalid"
-              (click)="comment()">Comment</button>
+              (click)="comment()">Комментировать</button>
 
       <button [disabled]="orderForm.disabled || approveInvalid"
-              (click)="approve()">Approve</button>
+              (click)="approve()">Согласовать</button>
     </div>
   </form>
 </div>
