--- a/frontend/src/app/shared/order-list/order-list.component.html
+++ b/frontend/src/app/shared/order-list/order-list.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="orders?.length" class="order-list">
   <div *ngFor="let order of orders" class="order-list__order form-control">
     <div class="order-description" (click)="openOrder(order.id)">
-      <span class="order-description__name">Order: {{order.id}}</span>
-      <span class="order-description__date">Date: {{order.startDate ?? ''}}</span>
-      <span class="order-description__status">Status: {{orderStatus(order)}}</span>
-      <div class="order-description__text">Description: {{description(order) ?? ''}}</div>
+      <span class="order-description__name">Заказ: {{order.id}}</span>
+      <span class="order-description__date">Дата: {{order.startDate ?? ''}}</span>
+      <span class="order-description__status">Статус: {{orderStatus(order)}}</span>
+      <div class="order-description__text">Описание: {{description(order) ?? ''}}</div>
     </div>
   </div>
 </div>
