--- a/frontend/src/app/student/completed-orders/completed-orders.component.html
+++ b/frontend/src/app/student/completed-orders/completed-orders.component.html
@@ -1,10 +1,10 @@
 <div class="completed-orders" [class.loading]="loading">
   <div class="completed-orders__header">
-    Completed Orders
+    Завершенные заказы
   </div>
 
   <app-order-list [orders]="orders"
                   (open)="openOrder($event)"></app-order-list>
 
-  <div *ngIf="orders?.length === 0" class="completed-orders__no-orders">No completed orders</div>
+  <div *ngIf="orders?.length === 0" class="completed-orders__no-orders">Нет завершенных заказов</div>
 </div>
