--- a/frontend/src/app/master/analytic/analytic.component.html
+++ b/frontend/src/app/master/analytic/analytic.component.html
@@ -5,7 +5,7 @@
     <mat-tab label="Средняя прибыль">
       <app-average-profit></app-average-profit>
     </mat-tab>
-    <mat-tab label="Вся прибыль">
+    <mat-tab label="Полная прибыль">
       <app-full-profit></app-full-profit>
     </mat-tab>
     <mat-tab label="Производительность">
