--- a/frontend/src/app/shared/order-info/pickpocketing-order-info/pickpocketing-order-info.component.html
+++ b/frontend/src/app/shared/order-info/pickpocketing-order-info/pickpocketing-order-info.component.html
@@ -4,7 +4,7 @@
 </div>
 
 <div class="form-control disabled">
-  <label>Титул человека</label>
+  <label>Титул персоны</label>
   <div class="order-info__value">{{order.title.name}}</div>
 </div>
 
