--- a/frontend/src/app/employee/completed-order/completed-order.component.html
+++ b/frontend/src/app/employee/completed-order/completed-order.component.html
@@ -3,7 +3,7 @@
     <app-order-info [order]="order"></app-order-info>
 
     <div class="form-control disabled">
-      <label>Точка сброса</label>
+      <label>Где спрятан заказ</label>
       <div class="value">{{order.droppoint}}</div>
     </div>
 
