--- a/frontend/src/app/master/students-for-master/students-for-master.component.html
+++ b/frontend/src/app/master/students-for-master/students-for-master.component.html
@@ -1,5 +1,5 @@
 <div class="students-for-master" [class.loading]="loading">
   <app-student-list [students]="students"></app-student-list>
 
-  <div *ngIf="students?.length === 0" class="students-for-master__no-students">Нет активных студентов</div>
+  <div *ngIf="students?.length === 0" class="students-for-master__no-students">Нет студентов</div>
 </div>
