--- a/frontend/src/app/shared/order-info/forgery-order-info/forgery-order-info.component.html
+++ b/frontend/src/app/shared/order-info/forgery-order-info/forgery-order-info.component.html
@@ -14,6 +14,6 @@
 </div>
 
 <div *ngIf="order.description" class="form-control disabled">
-  <label>Описание подбрасываемого объекта</label>
+  <label>Описание предмета</label>
   <div class="order-info__value description">{{order.description}}</div>
 </div>
