--- a/frontend/src/app/auth/login/login.component.html
+++ b/frontend/src/app/auth/login/login.component.html
@@ -22,7 +22,7 @@
       <button (click)="submit()">Вход</button>
 
       <div class="login__form__submit__redirect">
-        <span>Ещё нет аккаунта</span>
+        <span>Ещё нет аккаунта: </span>
         <a routerLink="/register">Регистрация</a>
       </div>
     </div>
