--- a/frontend/src/app/auth/register/register.component.html
+++ b/frontend/src/app/auth/register/register.component.html
@@ -23,10 +23,10 @@
     </div>
 
     <div class="register__form__submit">
-      <button (click)="submit()">Регистрация</button>
+      <button (click)="submit()">Зарегистрироваться</button>
 
       <div class="register__form__submit__redirect">
-        <span>Есть аккаунт</span>
+        <span>Есть аккаунт: </span>
         <a routerLink="/login">Вход</a>
       </div>
     </div>
