--- a/frontend/src/app/client/order/order-form/forgery-order-form/forgery-order-form.component.html
+++ b/frontend/src/app/client/order/order-form/forgery-order-form/forgery-order-form.component.html
@@ -1,6 +1,6 @@
 <form class="order-form" [formGroup]="form">
   <div class="form-control" [class.disabled]="form.disabled">
-    <label for="person" appRequired>Человек</label>
+    <label for="person" appRequired>Кому мы должны подбросить предмет?</label>
     <input id="person" type="text" formControlName="person">
   </div>
 
@@ -10,12 +10,12 @@
   </div>
 
   <div class="form-control" [class.disabled]="form.disabled">
-    <label appRequired>Предмет</label>
-    <app-search-select formControlName="item" [data]="items"></app-search-select>
+    <label appRequired>Что мы должны подбросить?</label>
+    <app-search-select id="item" formControlName="item" [data]="items"></app-search-select>
   </div>
 
   <div class="form-control" [class.disabled]="form.disabled">
-    <label for="description">Описание предмета</label>
+    <label for="description">Описание</label>
     <textarea id="description" formControlName="description"></textarea>
   </div>
 </form>
