--- a/frontend/src/app/employee/my-order/my-order.component.html
+++ b/frontend/src/app/employee/my-order/my-order.component.html
@@ -3,12 +3,12 @@
     <app-order-info [order]="order"></app-order-info>
 
     <div class="form-control">
-      <label for="droppoint">Где спрятан украденный предмет</label>
+      <label for="droppoint">Отчет о выполнении заказа:</label>
       <input type="text" id="droppoint" formControlName="droppoint">
     </div>
 
     <div class="form-control">
-      <label for="comment">Комментарий</label>
+      <label for="comment">Отчет о невыполнении заказа:</label>
       <input type="text" id="comment" formControlName="comment">
     </div>
 
