--- a/frontend/src/app/shared/employee-list/employee-list.component.html
+++ b/frontend/src/app/shared/employee-list/employee-list.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="employees?.length" class="employee-list">
   <div *ngFor="let employee of employees" class="employee-list__employee form-control">
     <div class="employee-description">
-      <span class="employee-description__id">Сотрудник: {{employee.id}}</span>
-      <span class="employee-description__name">Имя: {{employee.username ?? ''}}</span>
+      <span class="employee-description__id">ID сотрудника: {{employee.id}}</span>
+      <span class="employee-description__name">Логин: {{employee.username ?? ''}}</span>
     </div>
   </div>
 </div>
