--- a/frontend/src/app/client/order/order-form/pickpocketing-order-form/pickpocketing-order-form.component.html
+++ b/frontend/src/app/client/order/order-form/pickpocketing-order-form/pickpocketing-order-form.component.html
@@ -1,12 +1,12 @@
 <form class="order-form" [formGroup]="form">
   <div class="form-control" [class.disabled]="form.disabled">
-    <label for="person" appRequired>Человек</label>
+    <label for="person" appRequired>Имя ограбляемого</label>
     <input id="person" type="text" formControlName="person">
   </div>
 
   <div class="form-control" [class.disabled]="form.disabled">
-    <label appRequired>Титул персоны</label>
-    <mat-select formControlName="title" [compareWith]="compareEntity">
+    <label appRequired>Титул</label>
+    <mat-select formControlName="title" id="title"  [compareWith]="compareEntity">
       <mat-option *ngFor="let title of titles" [value]="title">
         {{title.name}}
       </mat-option>
@@ -15,7 +15,7 @@
 
   <div class="form-control" [class.disabled]="form.disabled">
     <label appRequired>Предмет</label>
-    <app-search-select formControlName="item" [data]="items"></app-search-select>
+    <app-search-select formControlName="item" id="item" [data]="items"></app-search-select>
   </div>
 
   <div class="form-control" [class.disabled]="form.disabled">
