--- a/frontend/src/app/client/order/order-form/sweep-order-form/sweep-order-form.component.html
+++ b/frontend/src/app/client/order/order-form/sweep-order-form/sweep-order-form.component.html
@@ -5,8 +5,8 @@
   </div>
 
   <div class="form-control" [class.disabled]="form.disabled">
-    <label appRequired>Титул персоны</label>
-    <mat-select formControlName="title" [compareWith]="compareEntity">
+    <label appRequired>Титул хозяина дома</label>
+    <mat-select formControlName="title" id="title" [compareWith]="compareEntity">
       <mat-option *ngFor="let title of titles" [value]="title">
         {{title.name}}
       </mat-option>
@@ -15,7 +15,7 @@
 
   <div class="form-control" [class.disabled]="form.disabled">
     <label appRequired>Предмет</label>
-    <app-search-select formControlName="item" [data]="items"></app-search-select>
+    <app-search-select formControlName="item" id="item" [data]="items"></app-search-select>
   </div>
 
   <div class="form-control" [class.disabled]="form.disabled">
