--- a/frontend/src/app/shared/close-popup/close-popup.component.html
+++ b/frontend/src/app/shared/close-popup/close-popup.component.html
@@ -1,3 +1,3 @@
 <div class="close-popup">
-  <img src="assets/icons/close-popup.png" alt="X">
+  <img src="assets/icons/close-popup.png" id="close-popup" alt="X">
 </div>
