--- a/frontend/src/app/student/my-order/my-order.component.html
+++ b/frontend/src/app/student/my-order/my-order.component.html
@@ -3,7 +3,7 @@
     <app-order-info [order]="order"></app-order-info>
 
     <div class="form-control">
-      <label for="droppoint">Где спрятан украденный предмет</label>
+      <label for="droppoint">Где спрятано украденное?</label>
       <input type="text" id="droppoint" formControlName="droppoint">
     </div>
 
